@@ -28,6 +28,9 @@ Release 0.18.3 - Unreleased
     HADOOP-4643. NameNode should exclude excessive replicas when counting
     live replicas for a block. (hairong)
 
+    HADOOP-4703. Should not wait for proxy forever in lease recovering.
+    (szetszwo)
+
 Release 0.18.2 - 2008-11-03
 
   BUG FIXES
